# Crypto

./: Makefile  install.sh  pyproject.toml  requirements.txt
eda/data/: titanic.csv
eda/notebooks/: titanic.ipynb
