[project]
name = "crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black",
    "catboost",
    "hyperopt",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lightgbm",
    "matplotlib",
    "mlflow",
    "notebook>=7.4.7",
    "numpy",
    "pandas",
    "pylint",
    "python-dotenv",
    "scikit-learn",
    "scipy",
    "seaborn",
    "setuptools",
    "xgboost",
]
